# nexusfrontiertech-coding-challenge

./: Coding Challenge OCR Machine 8c96ecf889d74c3291bce6648b6fc69b.md  OCR.py  README.md
ocrchallenge/: pyproject.toml
ocrchallenge/ocrchallenge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
