[tool.poetry]
name = "ocrchallenge"
version = "0.1.0"
description = ""
authors = ["Yutaro Watanabe <yutaro@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
opencv-python = "^4.2.0"
numpy = "^1.19.0"
pytesseract = "^0.3.4"
autocorrect = "^2.0.0"
wand = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
